Fixed some alignment issue on mobiles

--- a/docroot/sites/all/themes/ambitious/sass/forms.scss
+++ b/docroot/sites/all/themes/ambitious/sass/forms.scss
@@ -587,7 +587,14 @@ div.ctools-modal-content .form-item .description{
     margin-top: 0.5em;
     display: block;
     &.filter-help,
-    &.option {font-size: 1em;margin:0;display: inline;}
+    &.option {
+      font-size: 1em;
+      margin:0;
+      display: inline;
+      @include breakpoint($mobile){
+        font-size: 1em;
+      }
+    }
   }
   
   // All check boxes
